[tool.poetry]
name = "phd_utils"
version = "0.1.0"
description = ""
authors = [
    "Aatif Syed <aatifsyedyp@gmail.com>",
    "Zuheir Zaidon"
]

[tool.poetry.scripts]
tiff-stacker = "phd_utils:tiff_stacker.main"
csv-analyser = "phd_utils:csv_analyser.main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
black = "^21.4b2"
pytest = "^6.2.3"
mypy = "^0.812"
ipython = "^7.22.0"
ipykernel = "^5.5.3"
matplotlib = "^3.4.1"
bokeh = "^2.3.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
